<resources>
    <string name="app_name">BAMS</string>
    <string name="action_settings">Settings</string>
    <string name="menu">M</string>
    <string name="current_condition">출석현황</string>
    <string name="course_name">과 목 명 : </string>
    <string name="classroom">강 의 실 : </string>
    <string name="time">시  간 : </string>
    <string name="current_time">현재시간 : </string>
    <string name="attended">출석완료</string>
    <string name="late">지각</string>
    <string name="absent">결석</string>
    <color name="pp">#333399</color>
    <color name="wh">#FFFFFF</color>
    <string name="background_monitoring">Background Monitoring</string>
    <string name="background_ranging">Background Ranging</string>

    <string name="start_monitoring">Start Monitoring</string>
    <string name="start_ranging">Start Ranging</string>

    <string name="temp">xxxxx</string>
    <string name="major_label">Major: </string>
    <string name="minor_label">Minor: </string>
    <string name="tx_label">Tx Power: </string>
    <string name="rssi_label">RSSI: </string>
    <string name="proximity_label">Proximity: </string>
    <string name="accuracy_label">meters</string>

    <string name="location_permission_granted">Location permission has been granted. RECO SDK can now work properly.</string>
    <string name="location_permission_not_granted">Location permission for this application is denied. RECO SDK may not work properly.</string>
    <string name="location_permission_rationale">Location permission is needed to monitor or range beacons.</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
